# python-project-52

./: .coverage  .env  .env.example  .gitignore  Makefile  README.md  build.sh  coverage.xml  db.sqlite3  manage.py  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  hexlet-check.yml
labels/: apps.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
labels/fixtures/: labels.json
labels/migrations/: 0001_initial.py  0002_alter_label_name.py
labels/templates/labels/: create.html  delete.html  index.html
statuses/: apps.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
statuses/fixtures/: statuses.json
statuses/migrations/: 0001_initial.py
statuses/templates/statuses/: create.html  delete.html  index.html
task_manager/: asgi.py  settings.py  urls.py  views.py  wsgi.py
task_manager/locale/ru/LC_MESSAGES/: django.po
task_manager/templates/: base.html  home.html  index.html
tasks/: filter.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
tasks/fixtures/: tasks.json
tasks/migrations/: 0001_initial.py
tasks/templates/tasks/: create.html  delete.html  detail.html  filter.html  index.html
users/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
users/fixtures/: users.json
users/migrations/: 0001_initial.py
users/templates/users/: delete.html  index.html
