[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager for manage tasks"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "coverage>=7.13.5",
    "dj-database-url>=3.1.2",
    "django>=5.2.5",
    "django-bootstrap4>=26.1",
    "django-filter>=25.2",
    "dotenv>=0.9.9",
    "gunicorn>=25.1.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "rollbar>=1.3.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "task_manager.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "flake8>=7.3.0",
    "ruff>=0.15.6",
]
